--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Money Master</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <style>
+      #remaining-balance{
+        color: darkmagenta;
+      }
+    </style>
   </head>
   <body>
     <header class="text-center">
@@ -45,7 +50,7 @@
                         <input type="text" class="form-control" id="clothes">
                       </div>
                     </div>
-                    <button id="calculate-btn" class="btn btn-lg btn-primary fw-bold" onclick="calculateexpense()">Calculate</button>
+                    <button id="calculate-btn" class="btn btn-lg btn-primary fw-bold" onclick="calculatexpense()">Calculate</button>
                     <div class="my-2">
                         <h5 class="my-3 fw-bold">Total Expense: <span id="total-expense"></span></h5>
                         <h5 class="my-3 fw-bold" >Balance: <span id="balance"></span></h5>
@@ -63,7 +68,7 @@
                       </div>
                       <div class="my-2">
                         <h5 class="my-3 fw-bold ">Saving Amount: <span id="saving-amount"></span></h5>
-                        <h5 class="my-3 fw-bold ">Remaining Balance: <span class="remaining-balance"></span></h5>
+                        <h5 class="my-3 fw-bold ">Remaining Balance: <span id="remaining-balance"></span></h5>
                     </div>
                 </div>
             </div>
